--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@ body, html{
     display: grid;
     height: 100%;
 }
+@media only screen and (min-width: 1280px){
 body{
     background-color: #3C153B;
     color: white;
@@ -41,7 +42,7 @@ h1{
     font-family: kumlien-pro, serif;
     font-weight: 500;
     font-size: 16px;
-    font-style; normal;
+    font-style: normal;
     margin-left: 50px;
     margin-top: 325px;
     position:fixed; 
@@ -61,8 +62,8 @@ h1{
     font-family:kumlien-pro, serif; 
     font-weight: 500;
     font-size: 16px;
-    font-style; normal;
-    font-size:20px;
+    font-style: normal;
+    font-size: 20px;
     border-bottom: 1px solid white;
 }
 .glastonbury{
@@ -91,6 +92,7 @@ h1{
     font-style: normal;
     margin-left: 975px;
     margin-top: 33px;
+
 }.line1{
     color: white;
     margin-left: 975px;
@@ -101,3 +103,31 @@ h1{
     margin-top: -5px;
 
 }
+.hide{
+    visibility: hidden;
+    display: none;
+}
+}
+/*------tablet below this line---------*/
+@media only screen and (min-width: 800px) and (max-width: 1280px){
+  body{
+        background-color: #3C153B;
+        opactiy: 80%;
+        color: white;
+    }
+    #contents{
+        color: white;
+        font-family: ff-basic-gothic-pro, sans-serif;
+        font-weight: 300;
+        font-style: normal;
+        margin-left:975px;
+    }
+    a:link{
+        color: #E2F7FF;
+    }
+    a:visited{
+        color: #D0D0D0
+    }
+    a:hover{
+        color: white;
+    }
